Sanitized the urls for school sites

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 		  		<div class="column">
 					[Class]</br>
 					<ul>
-						<li><a href="https://ikas.egibide.org/moodle/login/index.php">Ikasle</a></li>
-						<li><a href="https://informatika.egibide.org/141aa/wp-login.php">Blog Clase</a></li>
-						<li><a href="https://konpetentziak.tknika.eus/ebaluazioa/">Gestion De Competencias</a></li>
+						<li><a href="#">School Page</a></li>
+						<li><a href="#">School Blog</a></li>
+						<li><a href="#">School Grades</a></li>
 					</ul>
 		  		</div>
 		  		<div class="column"">
